trigger-actions-framework/main/default/objects/Async_Work__mdt/Async_Work__mdt.object-meta.xml
<CustomObject>
    <label>Async Work</label>
    <pluralLabel>Async Work</pluralLabel>
</CustomObject>