trigger-actions-framework/main/default/objects/Async_Work__mdt/fields/Bypass_Execution__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Execution__c</fullName>
    <label>Bypass Execution</label>
    <description>When checked, the dispatcher skips this work key. Drained records are discarded for the transaction.</description>
    <inlineHelpText>When checked, the dispatcher skips this work key.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>