trigger-actions-framework/main/default/objects/Async_Work__mdt/fields/Factory_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Factory_Class_Name__c</fullName>
    <label>Factory Class Name</label>
    <description>API name of a class implementing AsyncWorkFactory. Resolved via Type.forName by AsyncDispatcher.</description>
    <inlineHelpText>API name of a class implementing AsyncWorkFactory.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>