trigger-actions-framework/main/default/objects/Async_Work__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <description>Optional. Ascending order in which the dispatcher resolves and enqueues work keys. Lower runs first.</description>
    <inlineHelpText>Ascending dispatch order. Lower runs first.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>