trigger-actions-framework/main/default/objects/Async_Work__mdt/fields/Work_Key__c.field-meta.xml
<CustomField>
    <fullName>Work_Key__c</fullName>
    <label>Work Key</label>
    <description>The AsyncWorkBuffer key this record resolves. Must match the key services register under.</description>
    <inlineHelpText>The AsyncWorkBuffer key this record resolves (e.g. CaseNotify).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>